[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonypy"
dynamic = ["version"]
description = "A data integration algorithm."
readme = "README.md"
license = ""
requires-python = ">=3.6"
authors = [
    { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
    { name = "John Arevalo", orcid = "0000-0002-1138-5036", email = "johnarevalo@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda11x>=12.0.0",  # For CUDA 11.x support
    "cupy-cuda12x>=12.0.0",  # For CUDA 12.x support
    "cudf-cu11>=23.12.*;python_version<'3.11'",  # CUDA 11.x
    "cudf-cu12>=23.12.*;python_version<'3.11'",  # CUDA 12.x
]
cuda11 = [
    "cupy-cuda11x>=12.0.0",
    "cudf-cu11>=23.12.*;python_version<'3.11'",
]
cuda12 = [
    "cupy-cuda12x>=12.0.0",
    "cudf-cu12>=23.12.*;python_version<'3.11'",
]
distributed = [
    "dask>=2023.3.0",
    "distributed>=2023.3.0",
    "dask-ml",
]

[project.urls]
Homepage = "https://github.com/slowkow/harmonypy"

[tool.hatch.version]
path = "harmonypy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/harmonypy",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]
